<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filterEpisodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_episodes"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/filterEnterEpisodeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_episode_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterEpisodes" />

    <EditText
        android:id="@+id/filterEnterLocationType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_location_episode_code"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterEnterEpisodeName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoMessage"
        app:layout_constraintBottom_toTopOf="@id/applyFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterEnterLocationType" />

    <Button
        android:id="@+id/backToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/applyFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterEnterLocationType" />

    <Button
        android:id="@+id/applyFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backToList"
        app:layout_constraintTop_toBottomOf="@id/filterEnterLocationType" />

</androidx.constraintlayout.widget.ConstraintLayout>